cmake_minimum_required(VERSION 3.25)
project(cfgtk LANGUAGES CXX)
include(CTest)

set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:/usr/local/lib64")
set(CMAKE_BUILD_RPATH "${CMAKE_BUILD_RPATH}:/usr/local/lib64")
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
set(CMAKE_CXX_STANDARD_REQUIRED 1)
set(CMAKE_CXX_STANDARD 20)

set(compile_options -Wall -Wextra -Wpedantic)
if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
	set(compile_options ${compile_options} -Werror -O0 -g)
	message(STATUS "Enabled debug mode")
else()
	set(compile_options ${compile_options} -O3)
	message(STATUS "Enabled release mode")
endif()
add_compile_options(${compile_options})

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
add_subdirectory(include)
add_subdirectory(src)
add_subdirectory(demo)
