add_executable(calculator calculator.cpp)
target_link_libraries(calculator PRIVATE cfgtk_parser cfgtk_lexer)

add_test(NAME calculator_test_001 COMMAND calculator 0 "0 - 0")
add_test(NAME calculator_test_002 COMMAND calculator 0 "0 + 0")
add_test(NAME calculator_test_003 COMMAND calculator 0 "0 * 0")
add_test(NAME calculator_test_004 COMMAND calculator 0 "1 - 1")
add_test(NAME calculator_test_005 COMMAND calculator 0 "1 * 0")
add_test(NAME calculator_test_006 COMMAND calculator 0 "0 / 1")
add_test(NAME calculator_test_007 COMMAND calculator 0 "(0 - 0)")
add_test(NAME calculator_test_008 COMMAND calculator 0 "(0 + 0)")
add_test(NAME calculator_test_009 COMMAND calculator 0 "(0 * 0)")
add_test(NAME calculator_test_010 COMMAND calculator 0 "(0 - (0) * 0)")
add_test(NAME calculator_test_011 COMMAND calculator 1.5 "3 / 2")
add_test(NAME calculator_test_012 COMMAND calculator 2 "1 + 1")
add_test(NAME calculator_test_013 COMMAND calculator 16 "2^4")
add_test(NAME calculator_test_014 COMMAND calculator 64 "2^2^3")
add_test(NAME calculator_test_015 COMMAND calculator 256 "2^(2^3)")
add_test(NAME calculator_test_016 COMMAND calculator "-18" "((-2) * (2 + 1)^2)")
add_test(NAME calculator_test_017 COMMAND calculator -5 "(2.3 * (-2) + (-0.4))")
add_test(NAME calculator_test_018 COMMAND calculator 100 "10^3 / 10")
add_test(NAME calculator_test_019 COMMAND calculator 49 "(1 - (-6))^2")
add_test(NAME calculator_test_020 COMMAND calculator 0.5 "2^(-1)")
